--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@types/node": "12.6.8",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.5",
+    "@types/reactstrap": "^8.0.1",
+    "bootstrap": "^4.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "reactstrap": "^8.0.1",
     "typescript": "3.5.3"
   },
   "scripts": {
